--enable-preview in Dockerfile